fable/test/valid/write_pow.f
      program prog
      write(6, *) 2**3
      end
