fable/test/semantic_error/external_array.f
      program prog
      external f1
      integer f1
      external f2
      integer f2(2)
      end
